--- a/style.css
+++ b/style.css
@@ -1,76 +1,78 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
 /* nav bar style  */
-header {
-    background-color: #faf8f8;
-    color: #353232;
-    padding: 20px;
+/* navbar design starts here */
+nav {
+    background-color: #e6f1f3;
+    color: rgb(7, 6, 6);
+    padding: 10px 0;
+}
+
+.navbar {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    min-height: 40px;
 }
 
-.logo span {
-    color: rgb(204, 69, 132);
-}
-
-.logo {
-    display: flex;
-    gap: 2px;
-    align-items: center;
-    margin-left: 10%;
-}
-
-.logo img {
-    width: 30px;
-    height: 30px;
-    margin-right: 10px;
-}
-
-.logo span {
-    color: #353232
-}
-
-.nav-title {
+.logo-container {
     display: flex;
     align-items: center;
-    width: 35%;
+    font-size: 35px;
+    font-weight: 500px;
+    gap: 10px;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
+.amer {
+    color: #f057a3;
 }
-.left-menu{
+
+.navigation-container {
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 20px;
-}
-.left-menu li {
-    display: inline;
-    margin-right: 10px;
+    gap: 30px;
 
 }
 
-.left-menu li a {
-    color: #000000;
+.navigation-container a {
     text-decoration: none;
+    margin-top: 20px;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    font-size: 18px;
 }
 
-.menu-item {
-    background-color: rgb(233, 233, 222);
-    padding: 10px 10px;
-    display: flex;
-    align-items: center;
-    gap: 2px;
+.nav-image {
+    width: 40px;
 }
 
+.navigation-container .login {
+    padding: 5px 10px;
+    background-color: #8dd6f5;
+    border-radius: 5px;
+    color: black;
+    font-weight: 700;
+    gap: 300px;
+
+}
+
+.navigation-container .login i {
+
+    margin: 5px;
+    font-size: 15px;
+}
+
+.fa-brands {
+    color: #a01b1b;
+}
+
+/* navbar design ends here */
 
 /* main banner style */
 
@@ -94,7 +96,9 @@ section {
 
 }
 
-h2, p, h1 {
+h2,
+p,
+h1 {
     margin-bottom: 3px;
 }
 
@@ -107,33 +111,20 @@ h1 {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 h2 {
     font-family: 'Times New Roman', Times, serif;
     font-size: 35px;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin-bottom: 10px;
-}
-
-ul li {
-    display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-}
-
-ul li img {
-    width: 20px;
-    height: 20px;
-    margin-right: 5px;
+.left-main .icon-banner i,
+p {
+    margin: 8px;
 }
 
 .button {
     justify-content: left;
     gap: 20px;
-    /* margin: 20px; */
     display: flex;
     border-radius: 50%;
 }
@@ -154,7 +145,10 @@ img {
     max-width: 100%;
     height: auto;
 }
-
+.icon-banner i{
+    color: lightseagreen;
+    
+}
 /* second section optional */
 .optional {
     display: flex;
@@ -185,28 +179,78 @@ img {
 
 /* third section */
 .choose {
-    text-align: center;
-    margin: 5%;
-}
-
-.choose p {
-    margin-bottom: 5%;
-}
-
-.choose-game {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 10px;
+    text-align: center;
+    margin: 50px;
 }
-
 .choose-game img {
-    width: auto;
+    margin: 20px;
+    width: 300px;
     height: 350px;
 }
 
 .choose-game span {
     color: black;
+}
+
+.choose p {
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+.choose-game {
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+.choose-game-box p {
+    text-align: left;
+    font-size: 20px;
+}
+.choose-game-overlay {
+    position: relative;
+
+}
+.icon-overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background-color: rgba(68, 68, 68, 0.7);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.3s ease;
+}
+.icon-overlay i {
+    font-size: 50px;
+    color: #221f1f;
+}
+
+.icon-overlay .watch-now {
+    font-weight: 300px;
+    color: #0a0a0a;
+    font-size: 20px;
+    margin-top: 10px;
+}
+.fading-image {
+    width: 100%;
+    height: auto;
+    transition: opacity 0.3s ease;
+}
+
+.choose-game-overlay:hover .icon-overlay {
+    opacity: 1;
+}
+
+.choose-game-overlay:hover .fading-image {
+    opacity: 0.5;
 }
 
 /* forth section */
@@ -255,10 +299,7 @@ img {
     margin-left: 50px;
     text-align: right;
 }
-.right-div2 span
-{
-     color: #000000;
-}
+
 .left-div2 {
     margin-right: 50px;
     position: relative;
@@ -326,9 +367,20 @@ h4 {
     color: white;
     padding: 100px;
     text-align: center;
-    background-color: #161046;
+    background-color: #0c0927;
 }
-
+.footer-a{
+    display: flex;
+    justify-content: center;
+    margin: 30px;
+    gap: 25px;
+    
+}
+.footer-a a{
+   
+    color: white;
+    text-decoration: none;
+}
 .footer-logo {
     display: flex;
     gap: 20px;
@@ -336,87 +388,17 @@ h4 {
     align-items: center;
     text-align: center;
 }
-
 .footer span {
     color: rgb(255, 80, 147);
 }
-
 .icon-section {
     margin: 20px;
     display: flex;
     justify-content: center;
     gap: 20px;
 }
-
-@media screen and (max-width:688px) {
-    header {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .nav-title {
-        flex-direction: column;
-        text-align: center;
-        align-items: center;
-    }
-
-    section {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .left-main {
-        justify-content: center;
-        padding-left: 0;
-    }
-
-    .optional {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .choose-game {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .left-div2 {
-        margin-right: 0px;
-        margin-bottom: 20px;
-        text-align: center;
-    }
-
-    .left-div {
-        margin-right: 0px;
-        margin-bottom: 20px;
-        text-align: center;
-    }
-
-    .fifth {
-        flex-direction: column-reverse;
-        text-align: center;
-    }
-
-    .forth {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    .button-section {
-        padding: 10px;
-    }
-
-    .row {
-        gap: 10px;
-        flex-wrap: wrap;
-    }
-
-    .footer-logo {
-        text-align: center;
-    }
-
-    .icon-section {
-        flex-wrap: wrap;
-        text-align: center;
-    }
+.icon-section i
+{
+    font-size: 30px;
+    color: white;
 }
